# investment-decision-workflow-engine

./: .env.example  README.md  pyproject.toml  requirements.txt
config/: risk_rules.yaml  settings.yaml  strategies.yaml  universe.yaml
docs/: EPIC.md  architecture.md  decision_log_schema.md  evaluation_plan.md  mvp_scope.md
scripts/: build_embeddings.py  build_features.py  evaluate_decisions.py  evaluate_system.py  generate_recommendations.py  run_dashboard.py  run_human_review.py  run_ingestion.py  run_simulation.py  run_strategies.py
src/ai_investment_workflow/: __init__.py
src/ai_investment_workflow/agents/: __init__.py  anthropic_provider.py  base.py  orchestrator.py  roles.py  stub_provider.py
src/ai_investment_workflow/app/: __init__.py  actions.py  dashboard.py  data.py  views.py
src/ai_investment_workflow/evaluation/: __init__.py  asset_eval.py  by_strategy.py  decision_diagnostics.py  pipeline.py  portfolio_eval.py  windows.py
src/ai_investment_workflow/features/: __init__.py  base.py  company_snapshot_builder.py  momentum.py  pipeline.py  recent_returns.py  valuation.py  volatility.py
src/ai_investment_workflow/human_review/: __init__.py  base.py  decision_log.py  pipeline.py  queue.py  sources.py
src/ai_investment_workflow/ingestion/: __init__.py  base.py  pipeline.py  validation.py
src/ai_investment_workflow/rag/: __init__.py  base.py  context_packet.py  embeddings.py  pipeline.py  (+1 more)
tests/: conftest.py  test_agents.py  test_app.py  test_config.py  test_decision_diagnostics.py  test_evaluation.py  test_features.py  test_human_review.py  test_imports.py  test_ingestion.py  test_paths.py  test_rag.py  test_risk.py  test_schemas.py  test_simulation.py  test_strategies.py
tests/fixtures/: generate_prices.py  prices.parquet
(+37 files in other folders)
